Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-140451

TS video playback: no audio on Windows, corrupted audio on macOS

XMLWordPrintable

    • macOS, Windows
    • 22360a618 (dev), eef2d9609 (6.10), 9cd993dca (tqtc/lts-6.8)
    • Multimedia Current w28 ...

      Environment:

      MacOS 15.6.1 / Windows 11

      Qt Creator 18.0.0 

      Qt 6.10 RC

      Steps to reproduce:

      1. Run the QML media player app. 
      2. Play the sample video file - QTBUG-140451 

      Expected: The audio track is heard when playing the video sample.

      Actual: There's no audio heard on Windows, on macOS, audio plays back only as noise (distorted, unusable sound)

       

      Reproducibility:  100%

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            timblechmann tim blechmann
            lkos Łukasz Kosiorowski
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes