FFmpeg: QFFmpegResampler - fix initialization of input format

The ctor of QFFmpegResampler was taking the format from the codec
parameters. However the sample format may differ and we need to obtain
it from the codec context.

Fixes: QTBUG-140451
Pick-to: 6.8 6.10
Change-Id: I1b78e4b74e93cd99e1168a57157a22fda3b3af36
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>